<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_cupcake"
    tools:context="com.example.android.project1nanodegree.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_weight="1"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8dp"
                android:layout_marginLeft="@dimen/_16dp"
                android:layout_marginRight="@dimen/_8dp"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_24dp"
                android:layout_weight="2"
                android:fontFamily="cursive"
                android:text="@string/_logo_text"
                android:textSize="@dimen/_24sp" />

        </LinearLayout>


        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/picture1"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_150dp"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginRight="@dimen/_8dp"
                android:layout_weight="1"
                android:src="@drawable/gallery" />


            <ImageView
                android:id="@+id/picture2"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_150dp"
                android:layout_marginRight="@dimen/_8dp"
                android:layout_weight="1"
                android:src="@drawable/gallery1" />

            <ImageView
                android:id="@+id/picture3"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_150dp"
                android:layout_marginRight="@dimen/_8dp"
                android:layout_weight="1"
                android:src="@drawable/gallery2" />
        </LinearLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8dp"
            android:fontFamily="serif"
            android:text="@string/opening_hours"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_purple"
            android:textSize="@dimen/_24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8dp"
            android:layout_marginTop="@dimen/_8dp"
            android:fontFamily="serif"
            android:text="@string/tue_fri_12_00_18_00"
            android:textColor="@android:color/holo_purple"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="serif"
            android:text="@string/sat_12_00_16_00"
            android:textColor="@android:color/holo_purple"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8dp"
            android:layout_marginTop="@dimen/_16dp"
            android:fontFamily="serif"
            android:text="@string/address"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_purple"
            android:textSize="@dimen/_24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8dp"
            android:layout_marginTop="@dimen/_8dp"
            android:fontFamily="serif"
            android:text="@string/friedrichsring_40"
            android:textColor="@android:color/holo_purple"
            android:textSize="@dimen/_16sp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="serif"
            android:text="@string/_68161_mannheim"
            android:textColor="@android:color/holo_purple"
            android:textSize="@dimen/_16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="@dimen/_32dp"
                android:layout_height="@dimen/_32dp"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginTop="@dimen/_16dp"
                android:src="@drawable/phone_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_toRightOf="@id/phone_icon"
                android:autoLink="phone"
                android:text="@string/_0621_43_72_85_68"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/web_icon"
                android:layout_width="@dimen/_32dp"
                android:layout_height="@dimen/_32dp"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginTop="@dimen/_16dp"
                android:src="@drawable/web_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8dp"
                android:layout_marginTop="@dimen/_18dp"
                android:autoLink="web"
                android:text="@string/www_truecupcakes_de"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
